tests/invalid/non_linear_pattern.eff
(* A pattern must be linear. *)
let (a,a) = (5,4)
